Made a cover for the video and started a banner block

--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <title>КАК СОЗДАТЬ ПРИРОСТ ТРАФИКА И ПРОДАЖ В 2023 ГОДУ</title>
 </head>
+
 <body>
-    
+    <div class="wrapper">
+        <div class="wrapper-broadcast">
+            <div class="wrapper-banner">
+                <img src="images/banner.jpg" alt="Banner">
+                <p>Как создать прирост трафика и продаж в 2023 году?</p>
+                <div class="banner">
+                    <div class="training">
+                        <div class="training-ellips">
+                            <div class="ellips"></div>
+                            <p>Тренинг</p>
+                        </div>
+                        <h1>УДВОЕНИЕ ПРИБЫЛИ</h1>
+                        <p>Ты увеличишь прибыль в своем бизнесе от 2 до 6 раз за 3 месяца!</p>
+                    </div>
+                    <div class="offer">
+                        <p>Только до конца месяца действует специальное предложение! Подробности у куратора после регистрации</p>
+                        <button>Получить спецпредложение</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="wrapper-footer">
+        </div>
+    </div>
 </body>
+
 </html>
